gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-08-28  Stefan Petersen  <spe@geda.sul.org>

        * Fixed bug in configure.in. Probably a bug in autoconf.
          Now it should work to configure when libguile is dependent
          on other libs.
	
2000-08-26  Stefan Petersen  <spe@geda.seul.org>

        * Cleaned up configure stuff and added guile.m4 to enhance
          guile configuration.

2000-08-22  Stefan Petersen  <spe@geda.seul.org>

	* configure.in/configure: Made configure look for scm_run_hook
	  in libguile.

2000-08-21  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_text.c: Converted all complex references to use the new
	  complex pointer inside text structure

	* src/o_text.c: Added o_text_draw_lowlevel

	* src/o_complex.c *.c: Converted all complex references to use the new
	  complex structure

	* src/*.c: Went through all code and made sure code compiles with 
	  all the renamed variables

2000-08-20  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_arc.c: Converted all line_points references to use the new
	  arc structure

	* src/o_box.c: Converted all line_points references to use the new
	  box structure

	* src/o_text.c: Converted all text_* references to use the new
	  text structure

	* src/o_text.c: Found a long hidden bug, wasn't properly recomputing
	  screen_x and screen_y for text items

	* src/*.c: Converted all text_* references to use the new text 
	  structure

	* src/o_line.c: Converted all line_points references to use the new
	  line structure

	* src/o_net.c, o_pin.c, o_bus.c: Changed o_line_visible's parameters
	  to be correct (use line structure). 

	* src/o_pin.c: Converted all line_points references to use the new
	  line structure
