@@ -1,6 +1,6 @@
 
 scmdatadir = @gedadatadir@/scheme
-scmdata_DATA = gschem.scm list-keys.scm
+scmdata_DATA = gschem.scm list-keys.scm auto-uref.scm print-NB-attribs.scm
 
 MOSTLYCLEANFILES = *.log *~
 CLEANFILES = *.log *~
