@@ -9,7 +9,12 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
-2000-08-28  Stefan Petersen  <spe@geda.sul.org>
+2000-08-30  Stefan Petersen  <spe@geda.seul.org>
+
+	* Added auto-uref.scm and print-NB-attribs.scm scheme programs.
+	  Changed scheme/Makefile.am accordingly and reran automake.
+	
+2000-08-28  Stefan Petersen  <spe@geda.seul.org>
 
         * Fixed bug in configure.in. Probably a bug in autoconf.
           Now it should work to configure when libguile is dependent
